[package]
name = "graphql-introspect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GraphQL introspection query executor and SDL converter"
keywords = ["graphql", "introspection", "schema"]
categories = ["development-tools", "web-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { workspace = true, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json"] }
# wasm tokio: only time is supported; no rt-multi-thread
tokio = { version = "1", default-features = false, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }

[lints]
workspace = true
