[package]
name = "graphql-linter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pluggable linting engine for GraphQL"
keywords = ["graphql", "linter", "validation"]
categories = ["development-tools"]

[dependencies]
# Internal dependencies - NEW ARCHITECTURE
graphql-base-db = { path = "../base-db" }
graphql-syntax = { path = "../syntax" }
graphql-hir = { path = "../hir" }
graphql-apollo-ext = { path = "../apollo-ext" }

# GraphQL parsing
apollo-parser = { workspace = true }
apollo-compiler = { workspace = true }

# Core utilities
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = "0.1"

[dev-dependencies]
serde_yaml = { workspace = true }
insta = { workspace = true }
graphql-ide-db = { path = "../ide-db" }
