[package]
name = "graphql-linter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pluggable linting engine for GraphQL"
keywords = ["graphql", "linter", "validation"]
categories = ["development-tools"]

[dependencies]
# Internal dependencies - NEW ARCHITECTURE
graphql-base-db = { path = "../base-db" }
graphql-syntax = { path = "../syntax", default-features = false }
graphql-hir = { path = "../hir", default-features = false }
graphql-apollo-ext = { path = "../apollo-ext" }

# GraphQL parsing
apollo-parser = { workspace = true }
apollo-compiler = { workspace = true }

# Core utilities
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"

# Logging
tracing = "0.1"

[features]
default = ["extract"]
extract = ["graphql-syntax/extract", "graphql-hir/extract"]
native = ["graphql-syntax/native", "graphql-hir/native"]

[dev-dependencies]
serde-saphyr = { workspace = true }
insta = { workspace = true }
graphql-ide-db = { path = "../ide-db" }

[lints]
workspace = true
